	* tests/junit/de/schlund/pfixcore/oxm/Test.java
	* tests/junit/de/schlund/pfixcore/oxm/testfragment.xml
	* tests/junit/de/schlund/pfixcore/oxm/FragmentBean.java
	
	Moved some methods from OXM unit test class to a new helper class
	* tests/junit/de/schlund/pfixcore/oxm/Test.java
	* tests/junit/de/schlund/pfixcore/oxm/helper/OxmTestHelper.java

2008-02-29  jtl  <jtl@britten.laudi.ka>

	* src/de/schlund/pfixcore/util/TransformerCallback.java (getIWrappers): 
	* projects/core/xsl/xmlfontify.xsl: fix getRoles -> getAllDefinedRoles; add more info for IWrappers (class name, ...)
	
	* src/de/schlund/pfixxml/util/CacheValueLRU.java: make it implement Map<K, V>. Just for the fun of it.
	
	* src/de/schlund/pfixcore/workflow/app/IWrapperContainerImpl.java: added. This will be the future implementation 
	of IWrapperContainer
	* src/de/schlund/pfixcore/workflow/app/IWrapperContainer.java (stayAfterSubmit): removed from interface 
	(getAssociatedPfixServletRequest): removed
	(getAssociatedContext): removed
	(getAssociatedResultDocument): removed
	
	* src/de/schlund/pfixcore/workflow/app/DefaultIWrapperState.java (getDocument): make special instanceof check for
	the type of the IWrapperContainer to be able to support the removed container.stayAfterSubmit() method for the
	old case a long it is not removed completely.

2008-02-27  jtl  <jtl@schoenberg.laudi.ka>

	* projects/core/xsl/xmlfontify.xsl: 
	* src/de/schlund/pfixcore/util/TransformerCallback.java (getRoles->getAllDefinedRoles): 
	changed the getRoles to getAllDefinedRoles, and also change the way it works. 
	Now it will return ALL defined roles for the current context.

2008-02-26  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* docs/*: 
	New styles for Docbook HTML generation.

2008-02-26  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* docs/*: 
	Extended Docbook build mechanism to support CSS.

2008-02-26  Martin Leidig  <mleidig@schlund.de>
